--- a/Facturas/index.html
+++ b/Facturas/index.html
@@ -41,7 +41,7 @@
 	</fieldset>
 	</main>
 	<footer>
-		Ejercicio para los alumnos de Campus FP Getafe - Las Margaritas
+		Gracias por visitar esta página web
 	</footer>
 </body>
 </html>
